BAH-4300 | Fix. styling - aligning tile headers in center

--- a/apps/registration/src/components/forms/additionalIdentifiers/styles/index.module.scss
+++ b/apps/registration/src/components/forms/additionalIdentifiers/styles/index.module.scss
@@ -16,7 +16,7 @@
 
 .patientDetailsHeader {
     display: flex;
-    align-items: center;
+    align-content: center;
   }
 
 .sectionTitle {
