--- a/apps/registration/src/pages/PatientRegister/styles/index.module.scss
+++ b/apps/registration/src/pages/PatientRegister/styles/index.module.scss
@@ -14,7 +14,7 @@
 // Patient Details Header
 .patientDetailsHeader {
    display: flex;
-    align-items: center;
+    align-content: center;
   }
 
 .sectionTitle {
